<resources>
    <string name="app_name">Sky Quest</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="splash_activity_image_content">Sky Quest Logo</string>
    <string name="splash_activity_tracker">Tracker</string>
    <string name="splash_activity_monitor">Monitor</string>
    <string name="settings">Settings</string>
    <string name="device_name">Device Name</string>
    <string name="sms_phone_number">SMS Phone Number</string>
    <string name="use_sms_tracker">Use SMS Tracker</string>
    <string name="phone_number_to_send_sms">Phone number to send SMS</string>
    <string name="use_camera">Use Camera</string>
    <string name="interval_between_photos_seconds">Interval between photos (seconds)</string>
    <string name="device_model_name_is_default">(Device model name is default)</string>
    <string name="interval_between_sms_seconds">Interval between SMS (seconds)</string>
    <string name="save">SAVE</string>
    <string name="send_location_to_sms">Send Location to SMS</string>
    <string name="reboot_only_root">Reboot (only root)</string>
    <string name="send_location_to_web">Send Location to Web</string>
    <string name="take_photo">Take Photo</string>
    <string name="test_features">Test Features</string>
    <string name="use_web_tracker">Use Web Tracker</string>
    <string name="interval_between_web_requests_seconds">Interval between web requests (seconds)</string>
</resources>
