<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/settings"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/device_name" />

        <EditText
            android:id="@+id/activity_activity_device_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPhonetic"
            android:maxLines="1" />


        <Switch
            android:id="@+id/activity_activity_use_sms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:checked="true"
            android:text="@string/use_sms_tracker"
            android:textColor="@color/gray6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sms_phone_number" />

        <EditText
            android:id="@+id/activity_activity_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLines="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/interval_between_sms_seconds" />

        <EditText
            android:id="@+id/activity_activity_sms_interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1" />


        <Switch
            android:id="@+id/activity_activity_use_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:checked="true"
            android:text="@string/use_camera"
            android:textColor="@color/gray6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/interval_between_photos_seconds" />

        <EditText
            android:id="@+id/activity_activity_camera_interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1" />

        <Switch
            android:id="@+id/activity_activity_use_web_tracker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:checked="true"
            android:text="@string/use_web_tracker"
            android:textColor="@color/gray6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/interval_between_web_requests_seconds" />

        <EditText
            android:id="@+id/activity_activity_web_tracker_interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1" />


        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/activity_activity_save"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/save"
            materialdesign:rippleSpeed="400" />

    </LinearLayout>
</ScrollView>