<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    android:orientation="vertical"
    android:paddingBottom="30dp"
    android:paddingEnd="40dp"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:paddingStart="40dp"
    android:paddingTop="30dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:text="@string/test_features"
        android:textColor="@color/gray1"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="20dp"
        android:background="@color/gray1" />

    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/activity_testing_take_photo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="40dp"
        android:text="@string/take_photo"
        materialdesign:rippleSpeed="400" />

    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/activity_testing_location_web"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="40dp"
        android:text="@string/send_location_to_web"
        materialdesign:rippleSpeed="400" />

    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/activity_testing_location_sms"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="40dp"
        android:text="@string/send_location_to_sms"
        materialdesign:rippleSpeed="400" />


    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/activity_testing_reboot"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:text="@string/reboot_only_root"
        materialdesign:rippleSpeed="400" />

</LinearLayout>