<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="30dp"
        android:contentDescription="@string/splash_activity_image_content"
        android:src="@drawable/skyquest_logo" />


    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/splash_activity_tracker_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="20dp"
        android:onClick="onTrackerClicked"
        android:text="@string/splash_activity_tracker"
        materialdesign:rippleSpeed="400" />

    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/splash_activity_monitor_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:onClick="onMonitorClicked"
        android:text="@string/splash_activity_monitor"
        materialdesign:rippleSpeed="400" />

</LinearLayout>